crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_inline_link_dest_strict_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..16
  PARAGRAPH@0..16
    TEXT@0..15 "[link](/my uri)"
    NEWLINE@15..16 "\n"
