crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_inline_link_dest_strict_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..16
  PARAGRAPH@0..16
    LINK@0..15
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..5
        TEXT@1..5 "link"
      LINK_TEXT_END@5..6 "]"
      LINK_DEST_START@6..7 "("
      LINK_DEST@7..14
        TEXT@7..14 "/my uri"
      LINK_DEST_END@14..15 ")"
    NEWLINE@15..16 "\n"
