crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_inline_math_multiline_dollars_gfm.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 98
expression: cst_output
---
DOCUMENT@0..32
  PARAGRAPH@0..32
    TEXT@0..18 "Math over a line: "
    TEXT@18..19 "$"
    TEXT@19..22 "a +"
    NEWLINE@22..23 "\n"
    TEXT@23..24 "b"
    TEXT@24..25 "$"
    TEXT@25..31 " done."
    NEWLINE@31..32 "\n"
