crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_issue_164_unicode_autolink_panic.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 96
expression: cst_output
---
DOCUMENT@0..3
  PARAGRAPH@0..3
    TEXT@0..2 "§"
    NEWLINE@2..3 "\n"
