crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_issue_174_blockquote_list_reorder_losslessness.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..432
  LIST@0..432
    LIST_ITEM@0..149
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..149
        STRONG@2..38
          STRONG_MARKER@2..4 "**"
          TEXT@4..36 "Main binary explanato ..."
          STRONG_MARKER@36..38 "**"
        TEXT@38..69 ": Opposition parties  ..."
        INLINE_CODE@69..81
          INLINE_CODE_MARKER@69..70 "`"
          INLINE_CODE_CONTENT@70..80 "v2psoppaut"
          INLINE_CODE_MARKER@80..81 "`"
        TEXT@81..148 " in V-Dem). This is a ..."
        NEWLINE@148..149 "\n"
    BLANK_LINE@149..150
      BLANK_LINE@149..150 "\n"
    LIST_ITEM@150..341
      LIST_MARKER@150..151 "-"
      WHITESPACE@151..153 "  "
      BLOCK_QUOTE@153..341
        BLOCK_QUOTE_MARKER@153..154 ">"
        WHITESPACE@154..155 " "
        PARAGRAPH@155..341
          TEXT@155..195 "- 0: Opposition parti ..."
          NEWLINE@195..196 "\n"
          TEXT@196..335 "-  > - 1: There are n ..."
          NEWLINE@335..336 "\n"
          WHITESPACE@336..339 "   "
          BLOCK_QUOTE_MARKER@339..340 ">"
          WHITESPACE@340..341 " "
    LIST_ITEM@341..432
      LIST_MARKER@341..342 "-"
      WHITESPACE@342..343 " "
      PLAIN@343..432
        TEXT@343..431 "2: At least some oppo ..."
        NEWLINE@431..432 "\n"
